# AndroidUnityInjector

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  inject.ps1  symbols.txt
injector/: CMakeLists.txt
injector/AndKittyInjector/AndKittyInjector/: CMakeLists.txt
lua/: CMakeLists.txt  LuaLibrary.h  symbols.txt
plugins/: CMakeLists.txt
plugins/Unity/: CMakeLists.txt  UnityResolve.hpp
plugins/Utils/: CMakeLists.txt
plugins/Utils/LIEF/: download.ps1
plugins/Utils/xdl/: CMakeLists.txt
plugins/dobby/: CMakeLists.txt
presets/: CMakePresets_Arm32.json  CMakePresets_Arm64.json
src/: inject.cpp  lib.cpp  log.cpp  main.cpp  utils.cpp
src/binds/: UnityResolve.cpp  base.cpp  bindings.cpp  dobby.cpp  global.cpp  lief.cpp  main.cpp  unity.cpp  xdl.cpp
src/include/: bindings.h  binds.h  log.h  main.h  test.h
src/test/: test.cpp
